--- a/src/app/ma_acopiadora/menu/menu.page.html
+++ b/src/app/ma_acopiadora/menu/menu.page.html
@@ -7,7 +7,7 @@
 
     <ion-tab-button tab="centroAcopio">
       <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
-      <ion-label class="text-color-purple text-bold">Crear Centro</ion-label>
+      <ion-label class="text-color-purple text-bold">Editar Centro</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
