--- a/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
@@ -1,9 +1,3 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Geolocalización</ion-title>
-  </ion-toolbar>
-</ion-header> -->
-
 <ion-content>
   <div class="border-top-page">
     <!-- Contenedor 1 -->
@@ -79,7 +73,7 @@
 
         </ion-list>   
 
-          <ion-button type="submit" expand="block" class="boton-warmi-in" (click)="guardarAsociacion()"><ion-icon name="card-outline"></ion-icon> &nbsp; &nbsp;Ordenar</ion-button>
+          <ion-button type="submit" expand="block" class="boton-warmi-in" (click)="guardarAsociacion()"><ion-icon name="card-outline"></ion-icon> &nbsp; &nbsp;Guardar</ion-button>
         
       </form>
       </ion-content>
