--- a/src/app/c_bus/tab-inicio/tab-inicio.page.html
+++ b/src/app/c_bus/tab-inicio/tab-inicio.page.html
@@ -18,14 +18,8 @@
   </ion-card>
   
   <!-- <ion-searchbar class="ion-padding" placeholder="Buscar" showCancelButton="never"></ion-searchbar> -->
-  <div class="container-search-bar">
-    <div class="size-search-bar">
-      <ion-searchbar placeholder="Buscar" class="search-bar-orange" showCancelButton="never"></ion-searchbar>
-    </div>
-  </div>
-
-  <ion-card class="map">
-    <capacitor-google-maps id="map"></capacitor-google-maps>
+  <ion-card style="width: 97%; height: 575px;">
+    <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
   </ion-card>
   
 </ion-content>
