--- a/src/app/ma_lideresa/menu/menu.page.html
+++ b/src/app/ma_lideresa/menu/menu.page.html
@@ -15,7 +15,7 @@
       <ion-label class="text-color-purple text-bold">Invitación</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="notificacion">
+    <ion-tab-button tab="notificaciones">
       <ion-icon src="/assets/iconos/notifications_1.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Notificaciones</ion-label>
     </ion-tab-button>
