--- a/src/app/googlemaps/googlemaps/googlemaps.component.html
+++ b/src/app/googlemaps/googlemaps/googlemaps.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<!-- <ion-content>
 
   <div class="contenedor-search">
     <div class="size-icon">
@@ -16,8 +16,36 @@
       </ion-chip>
     </div>
   </div>
-  <!--  -->
+
   <div class="padd-itemmap"></div>
   <div #map class="map"></div>
 
+</ion-content> -->
+
+<ion-content>
+
+  <div class="contenedor-search">
+    <div class="borde">
+      <div class="icon-margin-wm">
+        <ion-icon *ngIf="!buscador" class="icon-lup" src="/assets/iconos/search.svg"></ion-icon>
+      </div>
+      <div class="bar-search">
+        <input *ngIf="!buscador" class="" type="text" id="inputSearch" [(ngModel)]="searchGoogle"
+          showCancelButton="never" />
+        <input type="hidden" (input)="positionSet = $event.target.value" [(ngModel)]="positionSet">
+      </div>
+    </div>
+  </div>
+
+  <div class="padd-itemmap"></div>
+
+  <div #map class="map"></div>
+  <div class="contenedor-ubicacion">
+    <div>
+      <ion-chip *ngIf="!miUbicacion" (click)="mylocation()" class="chip-color">
+        <ion-label class="text-label">Mi ubicación actual</ion-label>
+        <ion-icon name="locate"></ion-icon>
+      </ion-chip>
+    </div>
+  </div>
 </ion-content>
