--- a/src/app/googlemaps/googlemaps/googlemaps.component.scss
+++ b/src/app/googlemaps/googlemaps/googlemaps.component.scss
@@ -1,104 +1,49 @@
-.contenedor-search{
+.contenedor-search {
   display: flex;
-  height: 30px;
-  width: 600px;
-}
-  
-.size-icon{
-  width: 35px;
-  height: 35px;
-  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 4px;
-  margin-left: 4px;
-  // margin-right: 1px;
-  // padding: 0;
-}
-.icon-lup{
-width: 100%;
-height: 100%;
-margin: 0;
-padding: 0;
+  height: 60px;
 }
 
-.bar-search{
-  width: 250px;
-  height: 30px;
+.icon-margin-wm {
+  margin-right: 10px;
+}
+
+.borde {
   display: flex;
-  justify-content: left;
+  flex-direction: row;
+  width: 250px;
+  justify-content: center;
   align-items: center;
-  margin-top: 4px;
-  margin-left: 0;
-  margin-right: 0;
-}
-@media(max-width:375px){
-
-  .bar-search{
-    width: 100px;
-    height: 30px;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    margin-top: 4px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-.contenedor-ubicacion{
- 
-}
-// .contenedor-item-s {
-//   display: flex;
-//   width: 50%;
-//   justify-content: center;
-//   align-items: center;
-//   padding: 6px 0;
-//   margin: 6px 0 6px 0;
-// }30
-
-
-.border-search {
-  border: 2px;
+  border: 3px;
   border-style: solid;
-  border-radius: 20px;
+  padding: 10px;
+  border-radius: 50px;
   border-color: var(--warmin-color-orange);
-  text-align: center;
 }
 
+#inputSearch {
+  border: 0;
+  background: transparent;  
+  width: 200px;
+  outline: none
+}
 
 .map {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 282px;
+  height: 290px;
 }
 
-.padd-itemmap{
-  padding: 3px;
-}
-// .miubicacion {
-//   position: relative;
-//   background: #f9b233;
-//   width: 30%;
-//   height: 45px;
-// }
-
-.ubicacion-actual{
-  background: var(--warmin-color-yellow);
- 
+.contenedor-ubicacion{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0 10px 0;
 }
 
-.text-label{
-
-}
-// .searchInput {
-//   text-align: center;
-//   // width: 90%;
-//    height: 45px;
-//   border-radius: 50px;
-//   border: 2px solid #EC6730;
-// }
-
-.searchInput:focus {
-  outline: none
+.chip-color{
+  background-color: var(--warmin-color-yellow);
 }
