--- a/src/app/ma_lideresa/tab-inicio/tab-inicio.page.html
+++ b/src/app/ma_lideresa/tab-inicio/tab-inicio.page.html
@@ -17,7 +17,13 @@
   <ion-item-divider style="text-align: center; color: black;">
     <h4>Ubicación  de punto de venta de vendoras</h4>
   </ion-item-divider> -->
-<ion-card style="width: 97%; height: 83%;">
+<!-- <ion-card style="width: 97%; height: 83%;">
   <app-googlemaps [modal]="modal" [feature] = "feature"></app-googlemaps>
-</ion-card>
+</ion-card> -->
+<div class="center">
+  <ion-card style="width: 282px; height: 410px">
+    <app-googlemaps [modal]="modal" [feature] = "feature"></app-googlemaps>
+  </ion-card>
+</div>
+
 </ion-content>
