--- a/src/app/ma_lideresa/tab_agricultoras/lista/tab-agricultoras.page.scss
+++ b/src/app/ma_lideresa/tab_agricultoras/lista/tab-agricultoras.page.scss
@@ -1,7 +1,47 @@
-.lista-agricultoras{
-    width: 90%;
-    height: 260px ;
+.padding-bar {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
-.img-agricultoras{
-    height: 40%;
+
+.contenedor-personas {
+    width: 100%;
+    height: 90%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
+.card {
+    cursor: pointer;
+    margin: 5px;
+    width: 200px;
+    height: 350px;
+    border: 3px;
+}
+
+.card:hover{
+    background: var(--warmin-color-yellow);
+    border-radius: 25% 10% 0 0;
+}
+
+.imagen-card {    
+    border-radius: 25% 10%;
+}
+
+.detalle-personal {
+    margin: 0;
+    width: 200px;
+    height: 210px;
+    background: rgba(255, 255, 255, 0.800);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;    
+}
+
+.texto-personal {   
+    text-align: center;
+    margin: 3px;
 }
