--- a/src/app/ma_lideresa/tab_notificaciones/lista/lista.page.html
+++ b/src/app/ma_lideresa/tab_notificaciones/lista/lista.page.html
@@ -7,18 +7,56 @@
       <div class="texto-header">Notificaciones</div>
     </div>    
   </div>
-  <ion-row>
-    <ion-col style="margin-top: 8px;">
-      <ion-label >Estado</ion-label> 
-    </ion-col>
-    <ion-col>
-          <ion-select interface="popover" placeholder="Seleccione...">
-            <ion-select-option value="apples">Aceptada</ion-select-option>
-            <ion-select-option value="oranges">Rechazada</ion-select-option>
-          </ion-select>
-       
-    </ion-col>
-  </ion-row>
+
+  <div class="contenedor-estado">
+    <div class="text-bold text-color-purple"> Estado</div>
+    <div>
+      <ion-select interface="popover" placeholder="Seleccione...">
+        <ion-select-option value="apples">Aceptada</ion-select-option>
+        <ion-select-option value="oranges">Rechazada</ion-select-option>
+      </ion-select>
+    </div>
+  </div>
+
+  <ion-card>
+    <ion-item style="font-size: 12px;">
+      <ion-chip slot="end" color="danger">Rechazada</ion-chip>
+      <ion-thumbnail slot="start">
+        <img alt="Silhouette of mountains" src="assets/img/mujer.webp" />
+      </ion-thumbnail>
+
+      <ion-label>
+        <div class="text-bold text-color-brown">María Perez</div>
+        <div class="text-color-purple">05/06/2022</div>
+      </ion-label>
+    </ion-item>
+    <ion-item style="font-size: 12px;">
+      <ion-chip slot="end" color="success">Aprobada</ion-chip>
+      <ion-thumbnail slot="start">
+        <img alt="Silhouette of mountains" src="assets/img/mujer.webp" />
+      </ion-thumbnail>
+
+      <ion-label>
+        <div class="text-bold text-color-brown">María Perez</div>
+        <div class="text-color-purple">05/06/2022</div>
+      </ion-label>
+    </ion-item>
+
+    <ion-item style="font-size: 12px;">
+      <ion-chip slot="end" color="success">Aprobada</ion-chip>
+      <ion-thumbnail slot="start">
+        <img alt="Silhouette of mountains" src="assets/img/mujer.webp" />
+      </ion-thumbnail>
+
+      <ion-label>
+        <div class="text-bold text-color-brown">María Perez</div>
+        <div class="text-color-purple">05/06/2022</div>
+      </ion-label>
+    </ion-item>
+
+  </ion-card>
+
+<!-- 
 <ion-card style="border-radius: 20px;">
     <ion-list>
       <ion-item>
@@ -85,7 +123,7 @@
           </ion-label>
           </ion-item>
         </ion-list>
-        </ion-card>
+        </ion-card> -->
 
 
 <ion-modal [keepContentsMounted]="true">
