--- a/src/app/ma_vendedora/componets/bus/bus.component.html
+++ b/src/app/ma_vendedora/componets/bus/bus.component.html
@@ -1,10 +1,15 @@
 
-<ion-card *ngFor="let bus of listBusesLine">
-  <ion-item>
-    <ion-icon name="bus-outline"></ion-icon>
-    <ion-card-header>
-      <ion-card-subtitle>{{bus.name}} -- {{bus.description}}</ion-card-subtitle>
-      <ion-card-title>{{bus.price}} $</ion-card-title>
-    </ion-card-header>
-</ion-item>
+<ion-card>
+  <ion-item *ngFor="let bus of listBusesLine">
+    <!-- <ion-chip slot="end" color="success">{{camioneta.status}}</ion-chip> -->
+    <ion-thumbnail slot="start">
+      <!-- <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/demos/api/thumbnail/thumbnail.svg" /> -->
+      <ion-icon name="bus-outline" style="height: 50px; width: 50px;"></ion-icon>
+    </ion-thumbnail>
+
+    <ion-label>
+      <div class="text-bold text-color-brown">{{bus.name}} - {{bus.description}}</div>
+      <div class="text-color-purple">$ {{bus.price}}</div>      
+    </ion-label>
+  </ion-item>
 </ion-card>
