--- a/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.css
+++ b/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.css
@@ -1,4 +1,4 @@
-capacitor-google-maps {
+/* capacitor-google-maps {
   display: inline-block;
   width: 100%;
   height: 100%;
@@ -7,4 +7,4 @@ capacitor-google-maps {
 .map {
   height: 70%;
   width: 95%;
-}/*# sourceMappingURL=geolocalizacion.page.css.map */
+}# sourceMappingURL=geolocalizacion.page.css.map */
