--- a/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.html
@@ -16,10 +16,17 @@
   <!-- <ion-item-divider style="text-align: center; color: black;">
   <h4>Indica en el mapa la ubicación de la asociación</h4>
 </ion-item-divider> -->
-  <ion-card style="width: 97%; height: 70%;">
+  <!-- <ion-card style="width: 97%; height: 70%;">
     <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
-  </ion-card>
-  <ion-button class="boton-warmi-in" id="open-modal" expand="block">Continuar</ion-button>
+  </ion-card> -->
+  <div class="center">
+    <ion-card style="width: 282px; height: 410px">
+      <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
+    </ion-card>
+  </div>
+<div class="btn-ordenar">
+  <ion-button class="boton-warmi-in" id="open-modal" >Continuar</ion-button>
+</div>
   
   <!-- Modal -->
 
