--- a/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.scss
+++ b/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.scss
@@ -1,9 +1,7 @@
-capacitor-google-maps {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-.map{
-    height: 70%;
-    width: 95%;
+.center{  
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
