--- a/src/app/ma_acopiadora/tab-crear-acopio/tab-crear-acopio.page.scss
+++ b/src/app/ma_acopiadora/tab-crear-acopio/tab-crear-acopio.page.scss
@@ -1,9 +1,16 @@
-capacitor-google-maps {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-.map{
-    height: 35%;
-    width: 95%;
+// capacitor-google-maps {
+//     display: inline-block;
+//     width: 100%;
+//     height: 100%;
+//   }
+// .map{
+//     height: 35%;
+//     width: 95%;
+// }
+.center{  
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
