--- a/src/app/ma_vendedora/geolocalizacion-huerto/geolocalizacion-huerto.page.scss
+++ b/src/app/ma_vendedora/geolocalizacion-huerto/geolocalizacion-huerto.page.scss
@@ -1,10 +1,7 @@
-	
-capacitor-google-maps {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-.map{
-    height: 75%;
-    width: 95%;
+.center{  
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
